# rimuru-crypto-empire

./: .dockerignore  .env.example  .env.security.example  .gitignore  .gitignore_sensitive  .pre-commit-config.yaml  .ruff.toml  BUILD_COMPLETE_HARDENED.md  CONTRIBUTING.md  CREDENTIAL_MANAGER_GUIDE.txt  DEPLOYMENT_GUIDE.md  Dockerfile.scanner  HARDENING_SUMMARY.md  INSTALLATION_REPORT.md  PROJECT_COMPLETION.md  QUICK_START.md  README.md  README_HARDENED.md  SECURITY.md  SYSTEM_SUMMARY.txt  UPGRADE_SUMMARY.md  cdp_sdk_test.py  check_edge_wallets.py  check_inventory.py  coinbase_auth_test.py  coinbase_balances.py  coinbase_check.py  coinbase_live_check.py  coinbase_probe.py  credential_manager.py  credential_manager_api.py  credential_manager_old.py  deep_asset_hunt.py  deploy.sh  docker-compose.team.yml  docker-compose.traders.yml  docker-compose.yml  find_my_money.py  init_db.sql  kraken_balances.py  (+10 more)
.github/workflows/: build-and-test.yml  deploy-staging.yml  rimuru-repair.yml
_ORGANIZED_INVENTORY/: 00_MASTER_INDEX.txt  COMPLETE_FILE_INVENTORY.txt
_ORGANIZED_INVENTORY/01_BACKEND_CODE/: BACKEND_INVENTORY.txt
backend/: Dockerfile  Dockerfile.ai  Dockerfile.analyzer  Dockerfile.api  Dockerfile.bot  Dockerfile.integrator  Dockerfile.pipeline  Dockerfile.price  Dockerfile.scanner  Dockerfile.wallet  requirements.txt  requirements_hardened.txt
backend/api/: ai_service.py  main.py  (+2 more)
crypto-pool-blockchain/: README.md  demo.py  requirements.txt  run_empire.py
data/: prices.db-journal
docs/: ARCHITECTURE_NOTES.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
ops/: deploy-rimuru.sh  runbook.md
qrow/: __init__.py  main.py
(+244 files in other folders)
